[tool.poetry]
name = "chaosgrid"
version = "0.1.0"
description = ""
authors = ["wachinaba <wachinaba@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mido = "^1.3.2"
python-rtmidi = "^1.5.8"
pygame = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
